--- a/src/public/css/paginate.css
+++ b/src/public/css/paginate.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   padding: 5px 10px;
   justify-content: center;
-  background-color: #D8CCA3;
+  background-color: #d8cca300;
 }
 .pagination a{
   text-decoration: none;
